[gd_scene load_steps=6 format=2]

[ext_resource path="res://scenes/end/End.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/ui_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/font_text_regular.tres" type="DynamicFont" id=3]
[ext_resource path="res://assets/fonts/font_score.tres" type="DynamicFont" id=4]
[ext_resource path="res://assets/fonts/font_shout.tres" type="DynamicFont" id=5]

[node name="End" type="Node2D"]
script = ExtResource( 1 )

[node name="Menu" type="VBoxContainer" parent="."]
margin_left = 533.534
margin_top = 102.987
margin_right = 857.534
margin_bottom = 592.987
theme = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="TitleLabel" type="Label" parent="Menu"]
margin_right = 324.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "Final score"
align = 1

[node name="ScoreLabel" type="Label" parent="Menu"]
margin_top = 55.0
margin_right = 324.0
margin_bottom = 225.0
custom_fonts/font = ExtResource( 4 )
text = "123!"
align = 1

[node name="LeaderboardLabel" type="Label" parent="Menu"]
margin_top = 229.0
margin_right = 324.0
margin_bottom = 256.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 0.996078, 0.682353, 0.203922, 1 )
text = "Submit to leaderboards:"
align = 1

[node name="NameEdit" type="LineEdit" parent="Menu"]
margin_top = 260.0
margin_right = 324.0
margin_bottom = 308.0
align = 1
max_length = 12

[node name="SubmitButton" type="Button" parent="Menu"]
margin_top = 312.0
margin_right = 324.0
margin_bottom = 368.0
text = "Submit"

[node name="Label" type="Label" parent="Menu"]
margin_top = 372.0
margin_right = 324.0
margin_bottom = 412.0

[node name="RetryButton" type="Button" parent="Menu"]
margin_top = 416.0
margin_right = 324.0
margin_bottom = 472.0
text = "Retry"

[node name="MainMenuButton" type="Button" parent="Menu"]
margin_top = 476.0
margin_right = 324.0
margin_bottom = 532.0
text = "Main menu"

[node name="HTTPRequest" type="HTTPRequest" parent="."]
